# panda

./: .gitignore  .mypy.ini  GENTLEREADME.md  README.md  custom_style.mplstyle  launch_data_ui.py  nohup.out  pyproject.toml  requirements.txt  setup.py
chronos_dysts/: attractor.py  augmentations.py  dataset.py  model.py  pipeline.py  sampling.py  tokenizer.py  utils.py
chronos_dysts/chronos/: dataset.py  model.py  pipeline.py
chronos_dysts/utils/: __init__.py  data_utils.py  eval_utils.py  test_utils.py  train_utils.py  type_aliases.py  typechecks.py
config/: analysis.yaml  config.yaml  dataset.yaml  dysts.yaml  evaluation.yaml  figures.yaml  model.yaml  train.yaml
dystformer/: attractor.py  augmentations.py  coupling_maps.py  dyst_data.py  events.py  sampling.py  schedulers.py  skew_system.py
dystformer/baselines/: baselines.py  evaluation.py
dystformer/chronos/: dataset.py  evaluation.py  model.py  pipeline.py  tokenizer.py
dystformer/patchtst/: callbacks.py  dataset.py  evaluation.py  model.py  modules.py  patchtst.py  pipeline.py
dystformer/utils/: __init__.py  data_utils.py  dyst_utils.py  eval_utils.py  plot_utils.py  test_utils.py  train_utils.py  typechecks.py
examples/: lorenz.py
notebooks/: augmentations.ipynb  baselines.ipynb  check_attractor.ipynb  check_dataset.ipynb  check_dataset_splits.ipynb  clamp.ipynb  data_preprocess.ipynb  distributional_metrics.ipynb  evaluate_ablations.ipynb  evaluate_baselines.ipynb  evaluate_scaled_all.ipynb  evaluate_scalinglaw.ipynb  evaluation.ipynb  evaluation_train.ipynb  filter_and_save_params_dicts.ipynb  forecast.ipynb  inference.ipynb  inheritance.ipynb  ks_eval.ipynb  ks_eval_multirun.ipynb  kuramotoshivashinsky.ipynb  load_mlm_from_hf.ipynb  load_model_from_hf.ipynb  make_scalinglaw_params_splits.ipynb  mode_mixing.ipynb  model_analysis.ipynb  otherrealdata.ipynb  plot_completions.ipynb  plot_distributional_metrics.ipynb  plot_distributional_metrics_final.ipynb  plot_distributional_metrics_lyap.ipynb  plot_distributional_metrics_more.ipynb  plot_eval_metrics_forecast_combined.ipynb  plot_eval_metrics_forecast_combined_ablations.ipynb  plot_forecast.ipynb  plot_forecasts.ipynb  plot_lyapunov_comparison.ipynb  realdata.ipynb  realdata_eval.ipynb  test_metrics.ipynb  (+3 more)
notebooks/analysis/: lyapunov.ipynb  (+7 more)
panda/: attractor.py  augmentations.py  coupling_maps.py  dataset.py  dyst_data.py  evaluation.py  sampling.py  schedulers.py  skew_system.py
scripts/: compute_distributional_metrics.py  compute_gpdims.py  compute_inheritance.py  compute_metrics_from_forecasts.py  dataset_analysis.py  dyst_data.py  evaluate.py  filter_dataset.sh  fine_tune_small.sh  fix_checkpoint.py  get_run_metrics.py  make_dataset_from_params.py  make_dyst_data.py  make_skew_systems.py  run_data_generation.sh  run_eval.sh  run_finetune.sh  skew_product.py  train.py
tests/: attractor_checks.json  fix_checkpoint.py  fix_saved_metrics_csv.py  patchtst_test.py  profile_dyst_sampler.py  test_attractor.py  test_augmentations.py  test_completions.py  test_distributed.py  test_dyst_data.py  test_dysts_data.py  test_eval.py  test_filter.py  test_forecasts.py  test_generation.py  test_gluonts.py  test_jacobian.py  test_loader.py  test_param_perturb.py  test_patchtst_dataset.py  test_pipeline.py  test_saved_data.py  test_skew_sys.py
(+124 files in other folders)
