[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panda"
description = "Patched Attention for Nonlinear Dynamics"
version = "0.1.0"
readme = "README.md"
license = { text = "MIT" }  # SPDX license identifier
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hydra-core", 
    "numpy", 
    "torch", 
    "transformers", 
    "accelerate", 
    "dysts", 
    "gluonts[arrow]", 
    "scipy", 
    "scikit-learn", 
    "tqdm", 
    "wandb", 
    "matplotlib",
    "statsmodels",
    "orjson",
    "tensorboardX",
    "seaborn"
]

# Optional dependencies
[project.optional-dependencies]
numba = ["numba"]
chronos = ["datasets"] # huggingface datasets
rocm = ["torch==2.2.2"]
cpu = ["torch==2.6.0"]
profile = ["memory_profiler", "psutil"]

# Package data
[tool.setuptools]
packages = ["panda", "panda.utils"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu", extra = "cpu" }

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "rocm" },
    ]
]
